--- a/StockPrediction/stockprediction.ipynb
+++ b/StockPrediction/stockprediction.ipynb
@@ -1576,7 +1576,7 @@
     "id": "J8aqygG_LEPl"
    },
    "source": [
-    "### Feature scaling (tạm dịch: Scaling trích chọn)"
+    "### Feature scaling"
    ]
   },
   {
